src/objects/StudentTranscript__c.object
<CustomObject>
    <description>Object to manage the transcripts that must be collected through in-take and viewed by Mentors</description>
    <fields>
        <fullName>AccreditationInstitutionName__c</fullName>
        <formula>IF( TranscriptInstitution__r.ParentId = NULL, TranscriptInstitution__r.Name, TranscriptInstitution__r.Parent.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <formula>TranscriptInstitution__r.SchoolAccreditation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationPaidDate__c</fullName>
        <formula>IF(Opportunity__r.ApplicationPaidDate__c  &lt;  TranscriptReceivedDate__c, &apos;Paid Before&apos;, &apos;Paid After&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Paid Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BarcodeSubtype__c</fullName>
        <label>Barcode Subtype</label>
        <picklist>
            <controllingField>BarcodeType__c</controllingField>
            <picklistValues>
                <fullName>128A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>128B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code128A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BarcodeType__c</fullName>
        <label>Barcode Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code128</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>code39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ean13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CollegeEndDate__c</fullName>
        <description>Date you stopped attending class</description>
        <label>College End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollegeStartDate__c</fullName>
        <description>Date you started attending class</description>
        <label>College Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact of the student</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Transfer Institution</relationshipLabel>
        <relationshipName>StudentTransferInstitution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditsPresented__c</fullName>
        <label>Credits Presented</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateDegreeReceived__c</fullName>
        <description>The date they received the degree</description>
        <label>Date Degree Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeComment__c</fullName>
        <description>A comment describing the degree earned</description>
        <inlineHelpText>Qualify the degree earned with an applicable comment or description, such as specialization, major, minor, etc.</inlineHelpText>
        <label>Degree Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DegreeType__c</fullName>
        <label>Degree Type</label>
        <picklist>
            <picklistValues>
                <fullName>Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DegreestoWaiveRA__c</fullName>
        <description>Count of the number of degrees that will waive the RA</description>
        <label>Degrees to Waive RA</label>
        <summarizedField>TransferAttendance__c.DegreeValue__c</summarizedField>
        <summaryForeignKey>TransferAttendance__c.StudentTransferInstitution__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the highest discount that student can qualify</description>
        <label>Discount Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>ROCT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ROCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndMonthYear__c</fullName>
        <formula>EndMonth__c &amp;&quot; - &quot; &amp;EndYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndMonthYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndMonth__c</fullName>
        <formula>TEXT(MONTH(CollegeEndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndYear__c</fullName>
        <formula>TEXT(YEAR(CollegeEndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvaluationCount__c</fullName>
        <formula>Opportunity__r.CompletedTransferEvaluations__c +  Opportunity__r.OutstandingTransferEvaluations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexedCourses__c</fullName>
        <label>Indexed Courses</label>
        <summaryForeignKey>StudentTransferredCourse__c.StudentTransferInstitution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IndexedTotal__c</fullName>
        <formula>IndexedCourses__c +  IndexedTransferAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexed Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndexedTransferAttendance__c</fullName>
        <label>Indexed Transfer Attendance</label>
        <summaryForeignKey>TransferAttendance__c.StudentTransferInstitution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InstitutionAccountName__c</fullName>
        <formula>TranscriptInstitution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionCity__c</fullName>
        <label>Institution City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionName__c</fullName>
        <description>Represents a Institution that was manually entered because the applicant did not find it on the Institution drop down list.</description>
        <inlineHelpText>Manually enter an institution name that is not available in the known institutions listing.</inlineHelpText>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionState__c</fullName>
        <label>Institution State</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionZip__c</fullName>
        <label>Institution Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionalAccreditation__c</fullName>
        <formula>text(TranscriptInstitution__r.HEAccreditationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional Accreditation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstitutionalAccreditingBody__c</fullName>
        <description>The field from the account object for Higher Education Institution</description>
        <formula>text( TranscriptInstitution__r.HEAccreditationOrganization__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional Accrediting Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyCARETranscript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy CARE Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>Major of the degree</description>
        <label>Major</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <description>Minor of the degree</description>
        <label>Minor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnBaseFirstName__c</fullName>
        <formula>Opportunity__r.Account.StudentContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnBase First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnBaseLastName__c</fullName>
        <formula>Opportunity__r.Account.StudentContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnBase Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Student Transfer Institution</relationshipLabel>
        <relationshipName>opportunityTransferInstitution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <formula>Opportunity__r.Account.PIDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartMonthYear__c</fullName>
        <formula>StartMonth__c  &amp;&quot; - &quot; &amp; StartYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartMonthYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartMonth__c</fullName>
        <formula>Text (MONTH ( CollegeStartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartYear__c</fullName>
        <formula>TEXT(YEAR(CollegeStartDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StudentAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>StudentTranscripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Account.StudentContact__r.StudentID__c ), &quot;NO ID&quot;,  RIGHT(Opportunity__r.Account.StudentContact__r.StudentID__c, 9))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCredits__c</fullName>
        <label>Total Credits Presented</label>
        <summarizedField>StudentTransferredCourse__c.Credits__c</summarizedField>
        <summaryForeignKey>StudentTransferredCourse__c.StudentTransferInstitution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TranscriptID__c</fullName>
        <formula>LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptInstitution__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transcript Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Transfer Institution (Transcript Institution)</relationshipLabel>
        <relationshipName>SchoolTranscripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TranscriptName__c</fullName>
        <formula>Opportunity__r.Account.StudentContact__r.LastName+ &quot;, &quot; + Opportunity__r.Account.StudentContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptOPEID__c</fullName>
        <formula>IF( TranscriptInstitution__r.ParentId = NULL,  TranscriptInstitution__r.OPEID__c, TranscriptInstitution__r.Parent.OPEID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript OPEID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptProgram__c</fullName>
        <formula>LEFT(Opportunity__r.MarketingProgram__r.Name, 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptReceivedDate__c</fullName>
        <description>The date the transcript was received by the transcript team.</description>
        <inlineHelpText>The date the transcript was physically received</inlineHelpText>
        <label>Transcript Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TranscriptStatus__c</fullName>
        <description>Indicates the status of the transcripts associated with this school. The default is Expected. The status should be set to received when the scans are attached to the object record.</description>
        <inlineHelpText>When a transcript is expected, set the status to Expected and change the status to Received when it is attached. If a transcript is appealed, it will result in an approved or denied appeal.</inlineHelpText>
        <label>Transcript Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid - Unofficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid - Non Accredited School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid - No Degree Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied – Transfer Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied – Military</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WeightedInstitutionalDiscount__c</fullName>
        <formula>TranscriptInstitution__r.DiscountAmount__c  *  VALUE(TEXT(TranscriptInstitution__r.NumberDiscountedTerms__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Institutional Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Student Transfer Institution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>InstitutionName__c</columns>
        <columns>Opportunity__c</columns>
        <columns>TranscriptInstitution__c</columns>
        <columns>TranscriptName__c</columns>
        <columns>TranscriptReceivedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Institution-{0000}</displayFormat>
        <label>Student Transfer Institution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Transfer Institution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DateReceived</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(ISBLANK(TranscriptReceivedDate__c ), NOT(OR(TEXT(TranscriptStatus__c) = &quot;Requested&quot;, TEXT(TranscriptStatus__c) = &quot;Expected&quot;,  TEXT(TranscriptStatus__c) = &quot;Received&quot;, TEXT(TranscriptStatus__c) = &quot;Not Expected&quot;, TEXT(TranscriptStatus__c) = &quot;Appeal Denied – Transfer Credit&quot;, TEXT(TranscriptStatus__c) = &quot;Appeal Denied – Military&quot;,TEXT(TranscriptStatus__c) = &quot;Appealed&quot;, TEXT(TranscriptStatus__c) = &quot;Excluded&quot;))), true, false)</errorConditionFormula>
        <errorMessage>Please add the Transcript Received Date to the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoExclusionFA</fullName>
        <active>true</active>
        <description>If &quot;No Exclusion-FA&quot; is true then the status can not be changed to &quot;appeal&quot; or &quot;exclude&quot;.</description>
        <errorConditionFormula>AND(( Opportunity__r.NoExclusionFA__c=TRUE),(TEXT(TranscriptStatus__c)= &quot;Appealed&quot;)||(TEXT(TranscriptStatus__c)=&quot;Excluded&quot;)||(TEXT(TranscriptStatus__c)=&quot;Appeal Denied – Transfer Credit&quot;)||(TEXT(TranscriptStatus__c)=&quot;Appeal Denied – Military&quot;))</errorConditionFormula>
        <errorDisplayField>TranscriptStatus__c</errorDisplayField>
        <errorMessage>This record can not be &quot;Appeal&quot; or &quot;Exclude&quot; due to a financial aid restriction.</errorMessage>
    </validationRules>
</CustomObject>